--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
+
 {% load staticfiles %}
 
 
 {% block title %}<title>ooniversity-students_details</title>{% endblock %}
 
 
-{% block students %}<li class="{% block nav_brand_students %}active{% endblock %}"><a href="{% url 'students:list_view' %}">Студенты</a></li>{% endblock %}
+{% block nav_brand_students %}active{% endblock %}
 
 
 {% block content %}
