--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -6,7 +6,7 @@
 {% block title %}<title>ooniversity-students_list</title>{% endblock %}
 
 
-{% block students %}<li class="{% block nav_brand_students %}active{% endblock %}"><a href="{% url 'students:list_view' %}">Студенты</a></li>{% endblock %}
+{% block nav_brand_students %}active{% endblock %}
 
 
 {% block content %}
