--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -9,7 +9,8 @@
 <div class="col-md-10 col-md-push-1">
   <div class="container">
     <div class="col-md-12">
-{% include "include/courses_info_include.html" %}
+      <h1>{{ course }}</h1>
+      <h2>{{ course.description|truncatechars:32 }}</h2>
     <div class="container">
       <div class="col-md-12">
 
