--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -9,7 +9,7 @@
 			<h2 class='possition' align="center">ItBursa!</h2>
 			<div class='jumbotron'>
 				<h2>{{ course.name }}</h2>
-				<h3>{{ course.description|truncatechars:32 }}</h3>
+				<h3>{{ course.description|truncatechars_html:32 }}</h3>
 			</div>
 			<div text-align='center'>
 			<h1>Преподователи курса</h1>
