--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 
 
-{% block title %}<title>ooniversity-contact</title>{% endblock %}
+{% block title %}ooniversity-contact{% endblock title %}
 
 
 {% block nav_brand_contacts %}active{% endblock %}
