--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 
 
-{% block title %}<title>ooniversity</title>{% endblock %}
+{% block title %}ooniversity{% endblock title %}
 
 
 {% block nav_brand_index %}active{% endblock %}
