--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 
 
-{% block title %}<title>ooniversity-students_details</title>{% endblock %}
+{% block title %}ooniversity-students_details{% endblock title %}
 
 
 {% block nav_brand_students %}active{% endblock %}
