--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
+
 {% load staticfiles %}
 
 
-{% block title %}<title>ooniversity-students_list</title>{% endblock %}
+{% block title %}ooniversity-students_list{% endblock title %}
 
 
 {% block nav_brand_students %}active{% endblock %}
