KZ 7.1 fifth try

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
 {% block title %}PyBursa contacts{% endblock %}
 
 
-{% block navigation_contacts %}active{% endblock %}
+{% block navigation_main_contacts %}active{% endblock %}
 
 
 {% block content %}
