--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -10,7 +10,8 @@
 {% block navigation_main %}active{% endblock %}
 
 
-{% block content %}<div class="container">
+{% block content %}
+<div class="container">
    <div class="container">
           <h2>{{ course.name|upper }} course details</h2>
             <h3>{{ course.description|truncatechars:32 }}</h3>
