--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
   <div class="container"></br></br></br></br></br>
 
-{% include "include/index_include.html" only%}
+{% include "include/index_include.html" %}
 
 <div class="container">
         <h3>Courses Program</h3>
