--- a/templates/students/list_view.html
+++ b/templates/students/list_view.html
@@ -10,7 +10,8 @@
 {% block navigation_students %}active{% endblock %}
 
 
-{% block content %}<div class="container">
+{% block content %}
+<div class="container">
   <h2>Students list</h2>
   </br>
   </br>
@@ -41,4 +42,5 @@
       </tbody>
     </table>
   </div>
-</div>{% endblock content %}
+</div>
+{% endblock content %}
