--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,65 +1,59 @@
 {% extends "base.html" %}
 
-
 {% load staticfiles %}
 
 
-{% block title %}Coach detail!{% endblock %}
+{% block title %}Coach detail{% endblock %}
 
 
-{% block navigation_main %}active{% endblock %}
+{% block nav_main %}active{% endblock %}
 
 
-{% block content %}<div>
+{% block content %}
+<div></br></br></br></br>
     <div class="container">
-            <div class="starter-template">
-        <div class="container">
-              <h2>{{ coach.user.first_name }} {{coach.user.last_name}}</h2>
-              <br>
-              <table class="table">
-                <thead>
-                    <tr>
-                      <td>Birth day</td>
-                      <td>{{ coach.date_of_birth|date:"j F, Y" }}</td>
-                    </tr>
-                    <tr>
-                      <td>Address</td>
-                      <td>{{ coach.address }}</td>
-                    </tr>
-                    <tr>
-                      <td>Email</td>
-                      <td>{{ coach.user.email }}</td>
-                    </tr>
-                    <tr>
-                      <td>Skype</td>
-                      <td>{{ coach.skype }}</td>
-                    </tr>
-                    <tr>
-                      <td>Phone</td>
-                      <td>{{ coach.phone }}</td>
-                    </tr>
-                    <tr>
-                      <td>Courses coach</td>
-                      <td>
-                        {% for crs in course %}
-                            <a href="{% url 'courses:detail' crs.id %}">{{ crs.name }}</a> Course students
-                            <a href="{% url 'students:list_view' %}?course_id={{ crs.id }}">
-                            <span class="glyphicon glyphicon-education" aria-hidden="true"></span></a><br>
-                        {% endfor %}
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>Courses assistant</td>
-                      <td>
-                        {% for assist in assistant %}
-                            <a href="{% url 'courses:detail' assist.id %}">{{ assist.name }}</a> Course students 
-                            <a href="{% url 'students:list_view' %}?course_id={{ assist.id }}">
-                            <span class="glyphicon glyphicon-education" aria-hidden="true"></span></a><br>
-                        {% endfor %}
-                      </td>  
-                    </tr>
-                </thead>
-              </table>
-              </br>
+        {% include "coaches/include/coaches_include.html" %}
+          <table class="table">
+            <thead>
+                <tr>
+                  <td>Birth day</td>
+                  <td>{{ coach.date_of_birth|date:'j F, Y' }}</td>
+                </tr>
+                <tr>
+                  <td>Address</td>
+                  <td>{{ coach.address }}</td>
+                </tr>
+                <tr>
+                  <td>Email</td>
+                  <td>{{ coach.user.email }}</td>
+                </tr>
+                <tr>
+                  <td>Skype</td>
+                  <td>{{ coach.skype }}</td>
+                </tr>
+                <tr>
+                  <td>Phone</td>
+                  <td>{{ coach.phone }}</td>
+                </tr>
+                <tr>
+                  <td>Courses coach</td>
+                  <td>
+                    {% for crs in course %}
+                        <a href="{% url 'courses:detail' crs.id %}">{{ crs.name }}</a> Course students
+                        <a href="{% url 'students:list_view' %}?course_id={{ crs.id }}">
+                    {% endfor %}
+                  </td>
+                </tr>
+                <tr>
+                  <td>Courses assistant</td>
+                  <td>
+                    {% for assist in assistant %}
+                        <a href="{% url 'courses:detail' assist.id %}">{{ assist.name }}</a> Course students 
+                        <a href="{% url 'students:list_view' %}?course_id={{ assist.id }}">
+                    {% endfor %}
+                  </td>  
+                </tr>
+            </thead>
+          </table>
       </div>
     </div>{% endblock content %}
