--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -10,7 +10,8 @@
 {% block navigation_students %}active{% endblock %}
 
 
-{% block content %}<div>
+{% block content %}
+<div>
     <div class="container">
       <h1>Student details</h1>
         <div class="container">
@@ -46,4 +47,5 @@
             </tr>
           </table>
         </br>
-      </div>{% endblock content %}
+      </div>
+{% endblock content %}
