--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -11,10 +11,9 @@
 		  {{ form.as_p }}
 		  <input type="submit" value="Решить" />
 		</form>
-{% if error_2 = a %}<p><strong>коэффициент при первом слагаемом уравнения не может быть равным нулю</strong></p>{% endif %}
-<p>{{ d }}</p>
-{% if d in d %}
-{% if 0 > d %}<p><strong>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</strong></p>
+{% if d or d == 0 %}
+<p>Дискриминант: {{ d }}</p>
+{% if d < 0 %}<p><strong>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</strong></p>
 {% elif d == 0 %}<p><strong>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</strong></p>
 {% else %}<p><strong>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</strong></p>
 {% endif %}
