--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -7,7 +7,7 @@
 {% block title %}Курсы{% endblock title %}
 
 
-{% block nav_course_id %}?course_id={{courses.id}}{% endblock %}
+{% block nav_course_id %}?course_id={{ courses.id }}{% endblock %}
 
 
 {% block content %}
@@ -17,11 +17,11 @@
 	</div>
 	<h2>Преподаватели</h2>
 	<div class="panel panel-success">
-{% include "include/inc_instructor.html" with block_title="Учитель" instructor=courses.coach %}
+{% include "courses/include/inc_instructor_include.html" with block_title="Учитель" instructor=courses.coach %}
 </div>
 
 <div class="panel panel-success">
-{% include "include/inc_instructor.html" with block_title="Ассистент" instructor=courses.assistant %}
+{% include "courses/include/inc_instructor_include.html" with block_title="Ассистент" instructor=courses.assistant %}
 </div>
     <h2>План курса</h2>
     <table class="table table-hover">
