--- a/templates/courses/include/inc_teacher_include.html
+++ b/templates/courses/include/inc_teacher_include.html
@@ -1,6 +1,6 @@
 <div class="study_table">
     <div class="panel panel-default">
-  	  <div class="panel-heading"><h2 class="course_program" >{{ head }}</h2></div>
+  	  <div class="panel-heading"><h2 class="course_program" >{{ block_title }}</h2></div>
 		    <table class="table table-hover">           
           <tr><td><h3><a href="{% url 'coaches:detail' teacher.id %}">{{ teacher.get_full_name }} </a></h3></td></tr>
           <tr><td><h3>{{ teacher.description }}</h3></td></tr> 
