--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Hello, Python</title>
+    <title>Quadratic</title>
 
     <!-- Bootstrap -->
     <!--<link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -32,15 +32,19 @@
 <div class="container">
 <div class="panel-color jumbotron">
 <div>Квадратное уравнение a*x*x + b*x + c = 0</div><br>
-
-<ul>
+<form>
+	
+	{{ form.as_p }}
+	<input type="submit" />
+</form>
+<!--<ul>
   <li>a = {{a}}<br>
   {{a_error}}</li>
   <li>b = {{b}}<br> 
   {{b_error}}</li>
   <li>c = {{c}}<br> 
   {{c_error}}</li>
-</ul>
+</ul>-->
 <div>{{ d }}</div><br>
   
 <div>{{ mes }}</div>
