--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -11,11 +11,11 @@
 		  {{ form.as_p }}
 		  <input type="submit" value="Решить" />
 		</form>
-{% if d or d == 0 %}
-<p>Дискриминант: {{ d }}</p>
-{% if d < 0 %}<p><strong>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</strong></p>
-{% elif d == 0 %}<p><strong>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</strong></p>
-{% else %}<p><strong>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</strong></p>
+{% if context.d or context.d == 0 %}
+<p>Дискриминант: {{ context.d }}</p>
+{% if context.d < 0 %}<p><strong>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</strong></p>
+{% elif context.d == 0 %}<p><strong>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ context.x1 }}</strong></p>
+{% else %}<p><strong>Квадратное уравнение имеет два действительных корня: x1 = {{ context.x1 }}, x2 = {{ context.x2 }}</strong></p>
 {% endif %}
 {% endif %}
   </body>
