--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -18,7 +18,7 @@
                     дата рождения
                 </td>
                 <td>
-                    {{ coaches.date_of_birth|date:'j F, Y' }}
+                    {{ coaches.date_of_birth|date:'d F, Y' }}
                 </td>
             </tr>
             <tr>
