--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -35,10 +35,10 @@
   </div>
 
 
-{% include "courses/include/inc_teacher_include.html" with block_title="учитель" teacher=courses.coach %}
+{% include "courses/include/inc_instructor_include.html" with block_title="Учитель" instructor=courses.coach %}
 
 
-{% include "courses/include/inc_teacher_include.html" with block_title="ассистент" teacher=courses.assistant %}
+{% include "courses/include/inc_instructor_include.html" with block_title="Ассистент" instructor=courses.assistant %}
  
 
  <div class="course_id" >
