--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,49 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>PyBursa Main</title>
-</head>
-<body>
-  {% load staticfiles %}
-  <meta content="text/html; charset=utf-8" http-equiv="content-type">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta content="" name="description">
-  <meta content="" name="author">
-  <link href="{% static 'bootstrap/css/style.css' %}" rel="stylesheet"><!-- Bootstrap -->
-  <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type=
-        "button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class=
-        "icon-bar"></span></button> <a class="navbar-brand" href="{% url 'index' %}">PyBursa</a>
-      </div><!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li class="active">
-            <a href="{% url 'index' %}">Main</a>
-          </li>
-          <li>
-            <a href="{% url 'contact' %}">Contacts</a>
-          </li>
-          <li>
-            <a href="{% url 'students:list_view' %}">Students</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+{% extends "base.html" %}
+
+
+{% load staticfiles %}
+
+
+{% block title %}PyBursa Student information{% endblock title %}
+
+
+{% block active_students %}active{% endblock active_students %}
+
+
+{% block content %}
   <div class="container theme-showcase" role="main">
     <div class="container">
       <div class="jumbotron">
@@ -85,16 +52,8 @@
             </div>
           </div>
         </div>
-      </div><!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; PyBursa, 2015</p>
-      </footer>
-    </div>
-  </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-  </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
-
-  <script src="{% static 'bootstrap/js/bootstrap.js' %}">
-  </script>
-</body>
-</html>
+      </div>
+{% include "include/footer_include.html" %}
+  </div>
+ </div>
+{% endblock content %}
