--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,145 +1,103 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>student_detail</title>
+{% extends "base.html" %}
 
-    <!-- Bootstrap -->
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+{% block title %}student_detail{% endblock title %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-  <div class="wrapper">
-    <div class="header container">
-      <h1>Курс OONIVERSITY</h1>
-    </div>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-           <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main<span class="sr-only">(current)</span></a></li>
-            <li><a href="{% url 'contact' %}">Contact</a></li>
-            <li class=><a href="{% url 'student_list' %}">Students</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-    <div class="container">
-     <div class="jumbotron">
-       <h2>Sinenkiy Maxim</h2>
-       <img src="../static/images/avatar.jpg" alt="avatar">
-       <h3>Студент о себе</h3>
-       <p>Student's card</p>
-       <table class="table">
-            <tbody>
-              <tr>
-                <th>Surname</th>
-                <th>Sinenkiy</th>
-              </tr>
-              <tr>
-                <th>Name</th>
-                <th>Maxim</th>
-              </tr>
-              <tr>
-                <th>Patromynic</th>
-                <th>Alexandrovich</th>
-              </tr>
-              <tr>
-                <th>E-mail</th>
-                <th>msinenkiy@gmail.com</th>
-              </tr>
-              <tr>
-                <th>Rating</th>
-                <th>5</th>
-              </tr>
-              <tr>
-                <th>Average Grade</th>
-                <th>98</th>
-              </tr>
-              <tr>
-                <th>Package</th>
-                <th>standard</th>
-              </tr>
-              <tr>
-                <th>Birth Date</th>
-                <th>09/06/1988</th>
-              </tr>
-              <tr>
-                <th>Address</th>
-                <th>Украина, г.Харьков, ул.Блюхера, д.25б кв.3</th>
-              </tr>
-              <tr>
-                <th>Post</th>
-                <th>61010</th>
-              </tr>
-              <tr>
-                <th>Skype</th>
-                <th>msinenkiy</th>
-              </tr>
-            </tbody>
-         </table>
-         <p>Performance</p>
-         <table class="table">
-            <thead>
-              <tr>
-                <th>Course</th>
-                <th>Week</th>
-                <th>Control Type</th>
-                <th>Grade</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td scope="row">PY101 Введение в Python</td>
-                <td>Week 1</td>
-                <td>Tests</td>
-                <td>90%</td>
-              </tr>
-              <tr>
-                <td scope="row"></td>
-                <td></td>
-                <td>Problem Task №1</td>                
-                <td>100%</td>
-              </tr>
-              <tr>
-                <td scope="row"></td>
-                <td></td>
-                <td>Problem Task №2</td>                
-                <td>100%</td>
-              </tr>
-              <tr>
-                <td scope="row">PY101 Введение в Python</td>
-                <td>Week 2</td>
-                <td>Tests</td>
-                <td>100%</td>
-              </tr>
-              <tr>
-                <td scope="row"></td>
-                <td></td>
-                <td>Problem Task №1</td>                
-                <td>100%</td>
-              </tr>
-            </tbody>
-         </table>
-     </div>
-   </div>
-  </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-  </body>
-</html>
+{% block content %}
+<h2>Sinenkiy Maxim</h2>
+<img src="../static/images/avatar.jpg" alt="avatar">
+
+<h3>Студент о себе</h3>
+
+<p>Student's card</p>
+<table class="table">
+    <tbody>
+    <tr>
+        <th>Surname</th>
+        <th>Sinenkiy</th>
+    </tr>
+    <tr>
+        <th>Name</th>
+        <th>Maxim</th>
+    </tr>
+    <tr>
+        <th>Patromynic</th>
+        <th>Alexandrovich</th>
+    </tr>
+    <tr>
+        <th>E-mail</th>
+        <th>msinenkiy@gmail.com</th>
+    </tr>
+    <tr>
+        <th>Rating</th>
+        <th>5</th>
+    </tr>
+    <tr>
+        <th>Average Grade</th>
+        <th>98</th>
+    </tr>
+    <tr>
+        <th>Package</th>
+        <th>standard</th>
+    </tr>
+    <tr>
+        <th>Birth Date</th>
+        <th>09/06/1988</th>
+    </tr>
+    <tr>
+        <th>Address</th>
+        <th>Украина, г.Харьков, ул.Блюхера, д.25б кв.3</th>
+    </tr>
+    <tr>
+        <th>Post</th>
+        <th>61010</th>
+    </tr>
+    <tr>
+        <th>Skype</th>
+        <th>msinenkiy</th>
+    </tr>
+    </tbody>
+</table>
+<p>Performance</p>
+<table class="table">
+    <thead>
+    <tr>
+        <th>Course</th>
+        <th>Week</th>
+        <th>Control Type</th>
+        <th>Grade</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td scope="row">PY101 Введение в Python</td>
+        <td>Week 1</td>
+        <td>Tests</td>
+        <td>90%</td>
+    </tr>
+    <tr>
+        <td scope="row"></td>
+        <td></td>
+        <td>Problem Task №1</td>
+        <td>100%</td>
+    </tr>
+    <tr>
+        <td scope="row"></td>
+        <td></td>
+        <td>Problem Task №2</td>
+        <td>100%</td>
+    </tr>
+    <tr>
+        <td scope="row">PY101 Введение в Python</td>
+        <td>Week 2</td>
+        <td>Tests</td>
+        <td>100%</td>
+    </tr>
+    <tr>
+        <td scope="row"></td>
+        <td></td>
+        <td>Problem Task №1</td>
+        <td>100%</td>
+    </tr>
+    </tbody>
+</table>
+{% endblock %}
