--- a/templates/base.html
+++ b/templates/base.html
@@ -18,11 +18,11 @@
             </div>
             <div class="container">
                 <ul class="nav navbar-nav">
-                    <li class="{% block nav_class_index %}{% endblock %}"><a class="top_bar" href="{% url 'index' %}">Главная</a>
+                    <li class="{% block nav_class_index %}{% endblock nav_class_index %}"><a class="top_bar" href="{% url 'index' %}">Главная</a>
                     </li>
-                    <li class="{% block nav_class_contact %}{% endblock %}"><a class="top_bar" href="{% url 'contact' %}">Контакты</a>
+                    <li class="{% block nav_class_contact %}{% endblock nav_class_contact %}"><a class="top_bar" href="{% url 'contact' %}">Контакты</a>
                     </li>
-                    <li class="{% block nav_class_student %}{% endblock %}"><a class="top_bar" href="{% url 'students:list_view' %}{% block nav_course_id %}{% endblock %}">Студенты</a>
+                    <li class="{% block nav_class_student %}{% endblock nav_class_student %}"><a class="top_bar" href="{% url 'students:list_view' %}{% block nav_course_id %}{% endblock nav_course_id %}">Студенты</a>
                     </li>
                 </ul>
             </div>
