--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
 {% block title %}Контакты{% endblock title %}
 
 
-{% block nav_class_contact %}active{% endblock %}
+{% block nav_class_contact %}active{% endblock nav_class_contact %}
 
 
 {% block content %}
