--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -7,7 +7,7 @@
 {% block title %}Курсы{% endblock title %}
 
 
-{% block nav_course_id %}?course_id={{ courses.id }}{% endblock %}
+{% block nav_course_id %}?course_id={{ courses.id }}{% endblock nav_course_id %}
 
 
 {% block content %}
