--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -7,7 +7,7 @@
 {% block title %}Студент{% endblock title %}
 
 
-{% block nav_class_student %}active{% endblock %}
+{% block nav_class_student %}active{% endblock nav_class_student %}
 
 
 {% block content %}
