--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -7,7 +7,7 @@
 {% block title %}Студенты{% endblock title %}
 
 
-{% block nav_class_student %}active{% endblock %}
+{% block nav_class_student %}active{% endblock nav_class_student %}
 
 
 {% block content %}
