kz7_1 endblock fix

--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -2,10 +2,10 @@
 
 {% load staticfiles %}
 
-{% block title %}Coach detail!{% endblock %}
+{% block title %}Coach detail!{% endblock title %}
 
 
-{% block nav_main %}active{% endblock %}
+{% block nav_main %}active{% endblock nav_main %}
 
 
 {% block content %}<div class="container">
