--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -4,10 +4,10 @@
 {% load staticfiles %}
 
 
-{% block title %}Course detail!{% endblock %}
+{% block title %}Course detail!{% endblock title %}
 
 
-{% block nav_main %}active{% endblock %}
+{% block nav_main %}active{% endblock nav_main %}
 
 
 {% block content %}<div class="container">
