--- a/templates/students/add.html
+++ b/templates/students/add.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 
-{% block title %}Adding new student{% endblock %}
+{% block title %}Adding new student{% endblock title %}
 
 
-{% block nav_students %}active{% endblock %}
+{% block nav_students %}active{% endblock nav_students %}
 
 
 {% block content %}
