--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 
-{% block title %}Student detail{% endblock %}
+{% block title %}Student detail{% endblock title %}
 
 
-{% block nav_students %}active{% endblock %}
+{% block nav_students %}active{% endblock nav_students %}
 
 
 {% block content %}
