--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,7 +2,7 @@
 
 {% block title %}contact{% endblock title %}
 
-{% block nav_class_contact %}active{% endblock %}
+{% block nav_class_contact %}active{% endblock nav_class_contact %}
 
 {% block content %}
 <div id="main_organizers">
@@ -18,11 +18,11 @@
             <div class="organizers_name">
                 <b>Name:</b> Дария Михалевич
             </div>
-            <p class="alert alert-danger"><b>Email:</b> daria.mykhalevych@gmail.com</p>
+            <p class="alert alert-danger"><b>Email:</b>daria.mykhalevych@gmail.com</p>
 
-            <p class="alert alert-info"><b>Skype:</b> darka.darka.darka.darka.</p>
+            <p class="alert alert-info"><b>Skype:</b>darka.darka.darka.darka.</p>
 
-            <p class="alert alert-success"><b>Phone:</b> +38 096 469 15 57</p>
+            <p class="alert alert-success"><b>Phone:</b>+38 096 469 15 57</p>
         </div>
     </div>
     <div class="organizers">
@@ -62,4 +62,4 @@
     </div>
     <p class="address"><b>Name:</b> 61072 Харьков Украина просп. Ленина 40/3</p>
 </div>
-{% endblock %}
+{% endblock content %}
