--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -2,7 +2,7 @@
 
 {% block title %}students{% endblock title %}
 
-{% block nav_class_students %}active{% endblock %}
+{% block nav_class_students %}active{% endblock nav_class_students %}
 
 {% block content %}
 <div class="jumbotron">
@@ -38,4 +38,4 @@
         </table>
     </div>
 </div>
-{% endblock %}
+{% endblock content %}
