--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -2,7 +2,7 @@
 
 {% block title %}student_list{% endblock title %}
 
-{% block nav_class_students %}active{% endblock %}
+{% block nav_class_students %}active{% endblock nav_class_students %}
 
 {% block content %}
 <div class="panel panel-default">
@@ -68,4 +68,4 @@
         </tbody>
     </table>
 </div>
-{% endblock %}
+{% endblock content %}
