--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock title %}</title>
     {% load staticfiles %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
@@ -26,15 +26,15 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="{% block nav_main %}{% endblock %}"><a href="{% url 'index' %}">Main</a><li>
-            <li class="{% block nav_contacts %}{% endblock %}"><a href="{% url 'contact' %}">Contacts</a><li>
-            <li class="{% block nav_students %}{% endblock %}"><a href="{% url 'students:list_view' %}">Students</a><li>
+            <li class="{% block nav_main %}{% endblock nav_main %}"><a href="{% url 'index' %}">Main</a><li>
+            <li class="{% block nav_contacts %}{% endblock nav_contacts %}"><a href="{% url 'contact' %}">Contacts</a><li>
+            <li class="{% block nav_students %}{% endblock nav_students %}"><a href="{% url 'students:list_view' %}">Students</a><li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    {% block content %}{% endblock %}
+    {% block content %}{% endblock content %}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
