--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,10 +4,10 @@
 {% load staticfiles %}
 
 
-{% block title %}PyBursa contacts{% endblock %}
+{% block title %}PyBursa contacts{% endblock title %}
 
 
-{% block nav_contacts %}active{% endblock %}
+{% block nav_contacts %}active{% endblock nav_contacts %}
 
 
 {% block content %}<div class="container">
