--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
 {% load staticfiles %}
 
 
-{% block title %}Courses{% endblock %}
+{% block title %}Courses{% endblock title %}
 
 
-{% block nav_main %}active{% endblock %}
+{% block nav_main %}active{% endblock nav_main %}
 
 
 {% block content %}<div class="container">
