--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,8 +4,10 @@
 
 {% block title %}Contacts{% endblock title %}
 
-{% block nav_active_contact %}active{% endblock %}
+{% block nav_active_contact %}active{% endblock nav_active_contact %}
+
 {% block content %}
+
 		<div class ='container'>
 			<div class='jumbotron'>
 				<h2 class='text-uppercase'>Contacts</h2>
@@ -42,4 +44,5 @@
 				</table>
 			</div>
 		</div>
+		
 {% endblock content %}
