--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block title %}Main{% endblock title %}
 
-{% block nav_active_main %}active{% endblock %}
+{% block nav_active_main %}active{% endblock nav_active_main %}
 
 {% block content %}
 		<div class ='container'>
@@ -30,4 +30,5 @@
 				</table>
 			</div>
 		</div>
+		
 {% endblock content %}
