--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,10 +4,10 @@
 {% load staticfiles %}
 
 
-{% block title %}PyBursa contacts{% endblock %}
+{% block title %}PyBursa contacts{% endblock title %}
 
 
-{% block navigation_main_contacts %}active{% endblock %}
+{% block navigation_main_contacts %}active{% endblock navigation_main_contacts %}
 
 
 {% block content %}
