--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
 {% load staticfiles %}
 
 
-{% block title %}Courses{% endblock %}
+{% block title %}Courses{% endblock title %}
 
 
-{% block navigation_main %}active{% endblock %}
+{% block navigation_main %}active{% endblock navigation_main %}
 
 
 {% block content %}
