--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -4,10 +4,10 @@
 {% load static from staticfiles %}
 
 
-{% block title %}Student list{% endblock %}
+{% block title %}Student list{% endblock title %}
 
 
-{% block navigation_main_students %}active{% endblock %}
+{% block navigation_main_students %}active{% endblock navigation_main_students %}
 
 
 {% block content %}
