--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -4,10 +4,10 @@
 {% load static from staticfiles %}
 
 
-{% block title %}Student detail{% endblock %}
+{% block title %}Student detail{% endblock title %}
 
 
-{% block navigation_students %}active{% endblock %}
+{% block navigation_students %}active{% endblock navigation_students %}
 
 
 {% block content %}
