--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -4,10 +4,10 @@
 {% load staticfiles %}
 
 
-{% block title %}Course detail{% endblock %}
+{% block title %}Course detail{% endblock title %}
 
 
-{% block navigation_main %}active{% endblock %}
+{% block navigation_main %}active{% endblock navigation_main %}
 
 
 {% block content %}
