--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -4,10 +4,10 @@
 {% load static from staticfiles %}
 
 
-{% block title %}Student detail{% endblock %}
+{% block title %}Student detail{% endblock title %}
 
 
-{% block navigation_main_students %}active{% endblock %}
+{% block navigation_main_students %}active{% endblock navigation_main_students %}
 
 
 {% block content %}
