--- a/templates/students/list_view.html
+++ b/templates/students/list_view.html
@@ -4,10 +4,10 @@
 {% load static from staticfiles %}
 
 
-{% block title %}Students List{% endblock %}
+{% block title %}Students List{% endblock title %}
 
 
-{% block navigation_students %}active{% endblock %}
+{% block navigation_students %}active{% endblock navigation_students %}
 
 
 {% block content %}
