kz7_1 html fixing

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,7 +10,8 @@
 {% block nav_contacts %}active{% endblock nav_contacts %}
 
 
-{% block content %}<div class="container">
+{% block content %}
+  <div class="container">
       <div class="starter-template">
         <div class="container">
           <h1>PyBursa courses</h1>>
@@ -46,4 +47,5 @@
              </div>
         </div>
       </div>
-    </div>{% endblock content %}
+    </div>
+{% endblock content %}
