--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
+
 {% load staticfiles %}
+
 
 {% block title %}Coach detail!{% endblock title %}
 
@@ -8,7 +10,8 @@
 {% block nav_main %}active{% endblock nav_main %}
 
 
-{% block content %}<div class="container">
+{% block content %}
+    <div class="container">
       <div class="starter-template">
         <div class="container">
               <h2>{{ coach.user.first_name }} {{coach.user.last_name}}</h2>
@@ -59,4 +62,5 @@
               </table>
               </br>
       </div>
-    </div>{% endblock content %}
+    </div>
+{% endblock content %}
