--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 {% block nav_main %}active{% endblock nav_main %}
 
 
-{% block content %}<div class="container">
+{% block content %}
+  <div class="container">
       <div class="starter-template">
         <div class="container">
           <h2>PyBursa</h2>
@@ -40,4 +41,5 @@
           </table>
         </br>
       </div>
-    </div>{% endblock content %}
+   </div>
+{% endblock content %}
