lesson 7.1 is done

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,9 @@
 
 {% block content %}
 <div id="main_organizers">
-{% include "include/contact_include.html" %}
+    <h2 class="header_top">
+        Организаторы PyBursa
+    </h2>
     <div class="organizers">
         <div class="floatleft">
             <div class="organizers_crop">
