--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 
-{% load staticfiles %}
-
-
 {% block title %}Course detail{% endblock title %}
+
+
+{% block detail %}<li class="active"><a href="#">detail</a></li>{% endblock detail %}
 
 
 {% block navigation_main %}active{% endblock navigation_main %}
