--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,7 @@
 {% extends "base.html" %}
 
 
-{% load staticfiles %}
-
-
-{% block title %}Courses{% endblock title %}
+{% block title %}Main{% endblock title %}
 
 
 {% block navigation_main %}active{% endblock navigation_main %}
