--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -7,7 +7,7 @@
 {% block title %}Student detail{% endblock title %}
 
 
-{% block navigation_students %}active{% endblock navigation_students %}
+{% block navigation_main_students %}active{% endblock navigation_main_students %}
 
 
 {% block content %}
