--- a/templates/students/list_view.html
+++ b/templates/students/list_view.html
@@ -7,7 +7,7 @@
 {% block title %}Students List{% endblock title %}
 
 
-{% block navigation_students %}active{% endblock navigation_students %}
+{% block navigation_main_students %}active{% endblock navigation_main_students %}
 
 
 {% block content %}
