--- a/templates/include/course_description_include.html
+++ b/templates/include/course_description_include.html
@@ -1,5 +1,5 @@
 <div>
     <h2>{{ course_detail.name }}</h2>
 
-    <p>{{ course_detail.description|truncatechars_html:32 }}</p>
+    <p>{{ course_detail.description|truncatechars:35 }}</p>
 </div>
