KZ 7.1 and KZ 7.2 second try

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 
-{% block title %}PyBursa contacts{% endblock title %}
+{% load staticfiles %}
+
+
+{% block title %}Contacts{% endblock title %}
 
 
 {% block navigation_main_contacts %}active{% endblock navigation_main_contacts %}
