--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
 {% block title %}Pybursa Contact{% endblock title %}
 
 
-{% block nav_class_conatact %}active{% endblock %}
+{% block nav_class_conatact %}active{% endblock nav_class_conatact %}
 
 
 {% block content %}
