--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block title %}Pybursa Main{% endblock title %}
 
 
-{% block nav_class_index %}active{% endblock %}
+{% block nav_class_index %}active{% endblock nav_class_index %}
 
 
 {% block content %}
