--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -4,7 +4,7 @@
 {% block title %}Pybursa Students info{% endblock title %}
 
 
-{% block nav_class_students %}active{% endblock %}
+{% block nav_class_students %}active{% endblock nav_class_students %}
 
 
 {% load staticfiles %}
