--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -4,7 +4,7 @@
 {% block title %}Pybursa Students{% endblock title %}
 
 
-{% block nav_class_students %}active{% endblock %}
+{% block nav_class_students %}active{% endblock nav_class_students %}
 
 
 {% block content %}
