--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -21,9 +21,9 @@
         <h2>Преподаватели</h2> 
 
 
-        {% include 'include/inc_instructor.html' with block_title='Учитель' instructor=courses.coach %} 
+        {% include 'include/instructor_include.html' with block_title='Учитель' instructor=courses.coach %} 
 
-        {% include 'include/inc_instructor.html' with block_title='Ассистент' instructor=courses.assistant %}
+        {% include 'include/instructor_include.html' with block_title='Ассистент' instructor=courses.assistant %}
 
 
         <h2>Program about {{ courses }}</h2>
