--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,74 +1,82 @@
-{% extends 'base.html' %} 
-
-{% load staticfiles %} 
-
-
-{% block title %}Students Detail{%endblock%} 
-
-
-{% block nav_class_students %}active{% endblock %}
-
-
-{% block content %}
-    <div class="col-lg-12">
-        <div class="well student_detail">
-            <h2>{{ student.surname }} {{ student.name }}</h2>
-            <img src="{% static 'images/face.jpg' %}" alt="img">
-            <table class="table table-striped table-hover">
-                <tbody>
-                {% include 'include/inc_detail_info.html' with peoples=student peoples_email=student %} 
-                    <td>Courses</td>
-                    <td>{% for course in student.courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course }}</a>
-                        <br>{% endfor %}</td>
-                </tbody>
-            </table>
-            <h3>Perfomance</h3>
-            <table class="table table-hover perfomance">
-                <thead>
-                    <th>Course</th>
-                    <th>Week</th>
-                    <th>Control Type</th>
-                    <th>Grade</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>PyBursa</td>
-                        <td>Week1</td>
-                        <td>Tests</td>
-                        <td>99%</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td>Problem Tasks №1</td>
-                        <td>98%</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td>Problem Tasks №2</td>
-                        <td>100%</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>Week2</td>
-                        <td>Tests</td>
-                        <td>100%</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td>Problem Tasks №1</td>
-                        <td>99%</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td>Problem Tasks №2</td>
-                        <td>95%</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+{% extends 'base.html' %} {% load staticfiles %} {% block title %}Students Detail{%endblock%} {% block nav_class_students %}active{% endblock %} {% block content %}
+<div class="col-lg-12">
+    <div class="well student_detail">
+        <h2>{{ student.surname }} {{ student.name }}</h2>
+        <img src="{% static 'images/face.jpg' %}" alt="img">
+        <table class="table table-striped table-hover">
+            <tbody>
+                <tr>
+                    <td>Дата рождения</td>
+                    <td>{{ student.date_of_birth|date:'j F, Y' }}</td>
+                </tr>
+                <tr>
+                    <td>адрес</td>
+                    <td>{{ student.address }}</td>
+                </tr>
+                <tr>
+                    <td>почта</td>
+                    <td>{{ student.email }}</td>
+                </tr>
+                <tr>
+                    <td>логин skype</td>
+                    <td>{{ student.skype }}</td>
+                </tr>
+                <tr>
+                    <td>телефон</td>
+                    <td>{{ student.phone }}</td>
+                </tr>
+                <td>Courses</td>
+                <td>{% for course in student.courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course }}</a>
+                    <br>{% endfor %}</td>
+            </tbody>
+        </table>
+        <h3>Perfomance</h3>
+        <table class="table table-hover perfomance">
+            <thead>
+                <th>Course</th>
+                <th>Week</th>
+                <th>Control Type</th>
+                <th>Grade</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>PyBursa</td>
+                    <td>Week1</td>
+                    <td>Tests</td>
+                    <td>99%</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>Problem Tasks №1</td>
+                    <td>98%</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>Problem Tasks №2</td>
+                    <td>100%</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Week2</td>
+                    <td>Tests</td>
+                    <td>100%</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>Problem Tasks №1</td>
+                    <td>99%</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>Problem Tasks №2</td>
+                    <td>95%</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
+</div>
 {% endblock content %}
