--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -7,7 +7,7 @@
     <title>Equation</title>
   <body>
 		<h2>Квадратное уравнение a*x*x + b*x + c = 0</h2>
-		<form>
+		<form method="get">
 		  {{ context.form.as_p }}
 		  <input type="submit" value="Решить" />
 		</form>
