--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,10 +3,10 @@
 {% load staticfiles %} 
 
 
-{% block title %}Main Page{%endblock%}
+{% block title %}Main Page{% endblock title %}
 
 
-{% block nav_class_contacts %}active{% endblock %}
+{% block nav_class_contacts %}active{% endblock nav_class_contacts %}
 
 
 {% block content %}
