--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,19 @@
 {% load staticfiles %} 
 
 
-{% block title %}Main Page{%endblock%}
+{% block title %}Main Page{% endblock title %}
 
 
-{% block nav_class_index %}active{% endblock %}
+{% block nav_class_index %}active{% endblock nav_class_index %}
 
 
 {% block content %}
     <div class="col-lg-12">
         <div class="well">
-            {% filter upper %}<h1>Bursa</h1>{% endfilter %}
-            {% filter lower %}
+            <h1>Bursa</h1>
             <p>Данное направление позволяет освоить одну из самых популярных специальностей в IT-индустрии – программист. Немаловажным фактором является то, что слушателям предоставляется возможность ознакомиться с разными направлениями в программировании и выбрать для себя наиболее подходящий вариант. В программу курса включаются все аспекты программирования – начиная от основ алгоритмизации и заканчивая новейшими инструментариями используемыми в современной индустрии. Также в курс включаются предметы выходящие за рамки программирования, где слушатели знакомятся с основами проектирования, построением сложных систем и управлением программными проектами.</p>
-            {% endfilter %}
         </div>
-        {% filter upper %}<h2>Program</h2>{% endfilter %}
+        {% filter upper %}<h2>Program</h2>{% endfilter upper%}
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
