--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,4 +1,15 @@
-{% extends 'base.html' %} {% load staticfiles %} {% block title %}Students Detail{%endblock%} {% block nav_class_students %}active{% endblock %} {% block content %}
+{% extends 'base.html' %} 
+
+{% load staticfiles %} 
+
+
+{% block title %}Students Detail{% endblock title %} 
+
+
+{% block nav_class_students %}active{% endblock nav_class_students %} 
+
+
+{% block content %}
 <div class="col-lg-12">
     <div class="well student_detail">
         <h2>{{ student.surname }} {{ student.name }}</h2>
