--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -3,10 +3,10 @@
 {% load staticfiles %} 
 
 
-{% block title %}Students List{%endblock%} 
+{% block title %}Students List{% endblock title %} 
 
 
-{% block nav_class_students %}active{% endblock %}
+{% block nav_class_students %}active{% endblock nav_class_students %}
 
 
 {% block content %}
